# rust-solvers

./: .gitignore  Cargo.toml  temp-extract-solutions.py
.config/: nextest.toml
data/cosmic-express/: Andromeda 1.json  Andromeda 10.json  Ursa Minor 1 test.txt  Ursa Minor 2.json  Ursa Minor 3.json  test.json
data/golf-peaks/: 1-1.txt  1-10.txt  1-11.txt  1-12.txt  1-2.txt  1-3.txt  1-4.txt  1-5.txt  1-6.txt  1-7.txt  1-8.txt  1-9.txt  10-1.txt  10-10.txt  10-11.txt  10-12.txt  10-2.txt  10-3.txt  10-4.txt  10-5.txt  10-6.txt  10-7.txt  10-8.txt  10-9.txt  2-1.txt  2-10.txt  2-11.txt  2-12.txt  2-2.txt  2-3.txt  2-4.txt  2-5.txt  2-6.txt  2-7.txt  2-8.txt  2-9.txt  3-1.txt  3-10.txt  3-11.txt  3-12.txt  (+81 more)
data/good-snowman/: Adam.txt  Alex - Dream.txt  Alex.txt  Alice - Dream.txt  Alice.txt  Andy - Dream.txt  Andy.txt  Ben and Alan - Dream (partial).txt  Ben and Alan - Dream.txt  Ben and Alan.txt  Chris.txt  Cynthia and Michael.txt  David.txt  Freya 2.txt  Freya.txt  Helen.txt  Jack and Jill.txt  Jessica and Amelia - Dream.txt  Jessica and Amelia.txt  Julian.txt  Kate.txt  Kevin.txt  Lauren.txt  Louise - Dream.txt  Louise.txt  Lucy.txt  Lydia.txt  Mary.txt  Paul - Dream.txt  Paul.txt  Priscilla - Dream.txt  Priscilla.txt  Rebecca - Dream.txt  Rebecca.txt  Rob James and Matthew.txt  Sally - Dream.txt  Sally.txt  Sarah.txt  Tanya.txt  William.txt  (+4 more)
src/: direction.rs  lib.rs  point.rs
testit/: cosmic-express.json  golf-peaks.json  snakebird.json  sokobond-express.json  sokobond.json  sudoku.json  transmission.json  yugo.json
tests/: cosmic-express2.yaml
(+472 files in other folders)
