[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.86"
derive_builder = "0.12.0"
env_logger = "0.9.1"
fxhash = "0.2.1"
im = "15.1.0"
lazy_static = "1.5.0"
log = "0.4.17"
paste = "1.0.11"
priority-queue = { version = "1.3.1", features = ["serde"] }
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.147", features = ["derive"] }
serde-lexpr = "0.1.2"
serde_json = "1.0.87"
tracing = "0.1.37"
